# src/main/resources/openapi.yaml
@@ -23,7 +23,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/EntityCreateRequest'
+              $ref: '#/components/schemas/EntityRequest'
       responses:
         '201':
           description: Entity successfully created
@@ -141,10 +141,11 @@ components:
       description: Entity ID
 
   schemas:
-    EntityCreateRequest:
+    EntityRequest:
       type: object
       required: [ name, code, subSector, level,status ]
       properties:
+        id: { type: integer }
         name: { type: string, minLength: 3, maxLength: 100 }
         code: { type: string, minLength: 3, maxLength: 100 }
         subSector: { type: string, minLength: 3, maxLength: 100 }
@@ -152,7 +153,7 @@ components:
         status: { type: string , minLength: 3, maxLength: 100 }
     EntityUpdateRequest:
       allOf:
-        - $ref: '#/components/schemas/EntityCreateRequest'
+        - $ref: '#/components/schemas/EntityRequest'
     EntityResultResponse:
       title: EntityResultResponse
       type: object
